<resources>
    <string name="app_name">A4</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_item">Add Item</string>
    <string name="save">Save</string>
</resources>